package com.main.dhbworld.Firebase;

class TooManyClicksException extends Exception{

    public TooManyClicksException(String message) {
        super(message);
    }
}
