@startuml

title __FIREBASE's Class Diagram__\n

  namespace com.main.dhbworld {
    namespace Firebase {
      interface com.main.dhbworld.Firebase.CurrentStatusListener {
          {abstract} + onStatusReceived()
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      interface com.main.dhbworld.Firebase.DataSendListener {
          {abstract} + failed()
          {abstract} + success()
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      class com.main.dhbworld.Firebase.Issue {
          - problem : int
          - timestamp : long
          + getProblem()
          + getTimestamp()
          + setProblem()
          + setTimestamp()
          + toString()
          ~ Issue()
          ~ Issue()
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      interface com.main.dhbworld.Firebase.ReportCountListener {
          {abstract} + onReportCountReceived()
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      interface com.main.dhbworld.Firebase.SignedInListener {
          {abstract} + onSignInError()
          {abstract} + onSignedIn()
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      class com.main.dhbworld.Firebase.TooManyClicksException {
          + TooManyClicksException()
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      class com.main.dhbworld.Firebase.Utilities {
          {static} + CATEGORY_CAFETERIA : String
          {static} + CATEGORY_COFFEE : String
          {static} + CATEGORY_PRINTER : String
          - database : FirebaseDatabase
          - editor : Editor
          {static} - emulatorIp : String
          {static} - invalidateTime : long
          {static} - invalidateTimeClicks : long
          {static} - invalidateTimeSwitch : long
          - lastClick : long
          - mAuth : FirebaseAuth
          - preferences : SharedPreferences
          - user : FirebaseUser
          + Utilities()
          + addToDatabase()
          + getCurrentStatus()
          + getReportCount()
          + getUser()
          + removeFromDatabase()
          + setCurrentStatusListener()
          + setDataSendListener()
          + setReportCountListener()
          + setSignedInListener()
          + signIn()
          {static} + subscribeToTopic()
          - getIssueDatabase()
          - getIssueDatabase()
          - getIssueDatabaseWithUser()
      }
    }
  }
  

  com.main.dhbworld.Firebase.Utilities o-- com.main.dhbworld.Firebase.CurrentStatusListener : currentStatusListener
  com.main.dhbworld.Firebase.Utilities o-- com.main.dhbworld.Firebase.DataSendListener : dataSendListener
  com.main.dhbworld.Firebase.Utilities o-- com.main.dhbworld.Firebase.ReportCountListener : reportCountListener
  com.main.dhbworld.Firebase.Utilities o-- com.main.dhbworld.Firebase.SignedInListener : signedInListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
